2008-03-06  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.23.2.

2008-03-06  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.23.1 release.

2008-03-06  Thomas Thurman  <tthurman@gnome.org>

        * tools/release-wrangler.py: basic md5 printing (not used yet);
	also print release announcements to stdout (eventually will
	need to be emailed to release list and blogged)

2008-03-06  Thomas Thurman  <tthurman@gnome.org>

	Part three of the great prefs refactor, this time
	dealing with string preferences.  (This was the most
	complicated part, and has been especially tested and
	valground before committing.  As ever, though, let us
	know if you find a problem.)

        * src/core/prefs.c (MetaStringPreference): new struct.
	* src/core/prefs.c (update_*): replaced with *_handler
	* src/core/prefs.c (meta_prefs_init): uses new string prefs
	  init; uses array of gconf dirs to monitor rather than
	  repeating code.
	* src/core/prefs.c (handle_preference_init_enum): tidying
	* src/core/prefs.c (change_notify): uses new string prefs

2008-03-04  Thomas Thurman  <tthurman@gnome.org>

        * MAINTAINERS: added some spacing to see whether it
	helps Pulse

2008-03-03  Cosimo Cecchi  <anarki@lilik.it>

	Add ability to vertically and horizontally maximise
	using the mouse, by clicking the titlebar in various
	ways.  A very similar patch was received from Jason Ribero.
	Thanks also go to Tony Houghton and Carlo Wood, who
	both submitted patches which solved this differently.
	Closes #358674.

        * src/include/common.h (MetaActionTitlebar): new values
	for the new actions
        * src/core/core.c (meta_core_maximize_{vertic|horizont}ally):
	new functions.
        * src/ui/frames.c (meta_frame_titlebar_event): handle the
	new action values
        * src/core/window.h: new macros (for regularity, not really
	necessary)
        * src/core/prefs.c (symtab_titlebar_action): new string
	representations of the action values